--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <title>Frontend Mentor | Age calculator app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+
   <style>
 
   </style>
@@ -59,9 +59,7 @@
     </div>
 
 
-
-
-
+    <!-- resultado  -->
     <div class="resultado">
       <p>
         <span id="resultado-year">- -</span>
@@ -82,10 +80,13 @@
   </main>
 
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Jessica Ferraz</a>.
-  </div>
+  <footer class="attribution">
+    
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/ferrazjaa">Jessica Ferraz</a>. 2024.
+  </footer>
+
+ 
 
   <script src="calculo.js"></script>
 </body>
